NEW: 7_sem: Popov: Report

--- a/7_sem/Report/report.tex
+++ b/7_sem/Report/report.tex
@@ -3,11 +3,16 @@
 \begin{document}
 	\input{./tex/title.tex}
 	\tableofcontents
+	\newpage
 	
 	\input{./tex/introduction.tex}
     \input{./tex/task.tex}
+    \newpage
+    
 	\input{./tex/debug_test.tex}
-	%\input{./tex/results.tex}
+	\input{./tex/nonsmooth_test.tex}
+	\input{./tex/oscillating_test.tex}
+	\input{./tex/flowout_test.tex}
 
 	\input{./tex/bibliography.tex}
 \end{document}
