--- a/7_sem/Report/tex/introduction.tex
+++ b/7_sem/Report/tex/introduction.tex
@@ -117,7 +117,7 @@ $$
 Рассмотрим временной интервал $\Omega_t = [0,T]$ и пространственную область в виде отрезка $\Omega_x = [0, X]$, введем на них равномерные сетки с шагом $\tau$ и $h$ соответственно:
 $$ \bar w_{\tau} = \{n \tau \,|\, n = 0,\dots,N\}, \;\text{где}\; N \tau = T $$
 $$ \bar w_{h} = \{mh \,|\, m = 0,\dots,M\}, \;\text{где}\; Mh = X $$
-В области $ Q := \bar \Omega_{\tau} \times \bar \Omega_{h} $ 
+В области $ Q := \Omega_{t} \times \Omega_{x} $ 
 вводится сетка $ \bar Q_{\tau h} := \bar \omega_{\tau} \times \bar \omega_{h} $.
 
 
@@ -151,5 +151,3 @@ $$
   g_{x \bar{x}}= (g_{x})_{\bar{x}} 
   = \frac{g_{m-1}^{n}-2 g_{m}^{n}+g_{m+1}^{n}}{h^{2}}
 $$
-
-\newpage
