--- a/7_sem/Report/tex/title.tex
+++ b/7_sem/Report/tex/title.tex
@@ -5,13 +5,13 @@
 
 		Механико-математический факультет
 
-		Кафедра вычислительной математики\\[5cm]
+		Кафедра вычислительной математики\\[7cm]
 
 
-		{\bf Численное моделирование нестационарного одномерного течения газа с использованием неявной последовательной разностной схемы с центральными разностями ($\ln{\rho}$, $u$)\\[0.5cm]}
+		{\bf Численное моделирование нестационарного одномерного течения газа с использованием неявной разностной схемы с центральными разностями ($\ln{\rho}$, $u$)\\[0.5cm]}
 
 
-		\vspace{3cm}
+		\vspace{6cm}
 		\begin{flushright}
 			{\bfРаботу выполнила:}\\
 			Лобанова Валерия, 410 группа\\[0.5cm]
@@ -19,7 +19,7 @@
 			кандидат физико-математических наук,\\
 			доцент А. В. Попов\\
 		\end{flushright}
-		\vspace{2,5cm}
+		\vspace{5,5cm}
 
 		\normalsize Москва, 2021
 	\end{center}
